--- a/text/english/app.json
+++ b/text/english/app.json
@@ -31,13 +31,13 @@
     "wraLogo": {
       "logoLinkText": "Go to the main Welsh Revenue Authority site",
       "logoAltText": "Welsh Revenue Authority Logo",
-      "logoFilePath": "/img/wra-logo-english.svg",
+      "logoFilePath": "./img/wra-logo-english.svg",
       "logoHref": "https://gov.wales/welsh-revenue-authority"
     },
     "wgLogo": {
       "logoLinkText": "Go to the main Welsh Government site",
       "logoAltText": "Welsh Government Logo",
-      "logoFilePath": "/img/wg-logo-black.svg",
+      "logoFilePath": "./img/wg-logo-black.svg",
       "logoHref": "https://gov.wales/"
     },
     "footer": {
